<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E6E6E6"
    >

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#A4A4A4"
        android:gravity="center"

        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ricon_logo"

            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sms Kurulum Platformu"
            android:textSize="20sp"
            android:textColor="@color/black"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_weight="1"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lokasyon Adı:"
            android:textSize="@dimen/txt_kitap_duzenle"
            android:textColor="@color/black" />

        <EditText
            android:maxLines="1"
            android:layout_weight="1"
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="30dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_weight="1"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lokasyon Kodu:"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_kitap_duzenle" />

        <EditText
            android:maxLines="1"
            android:layout_weight="1"
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="15dip"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_weight="1"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sim Kart No:"
            android:textSize="@dimen/txt_kitap_duzenle"
            android:textColor="@color/black" />


        <EditText
            android:maxLines="1"
            android:layout_weight="1"
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dip"
            android:hint="Başına 0 ekleyiniz"
            android:ems="10"
            android:maxLength="11"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_weight="1"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Model Adı:"
            android:textSize="@dimen/txt_kitap_duzenle"
            android:textColor="@color/black" />


        <Spinner
            android:layout_weight="1.6"
            android:background="@drawable/rect_edt_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spin_kayit_mod"

            >
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <Button
            android:background="@drawable/custom_button"
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:text="Kayıt Düzenle" />
    </LinearLayout>

</LinearLayout>