...



    <Button
        android:background="@drawable/main_custom_button"
        android:layout_marginTop="15dp"
        android:id="@+id/btn_yenikayit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="Yeni Kayıt"
        android:layout_gravity="center"
        android:textSize="20sp"
        />

    <Button
        android:background="@drawable/main_custom_button"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_duzenle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="Düzenle"
        android:layout_gravity="center"
        android:textSize="20sp"
        />
...
