...
                android:layout_height="wrap_content"
                android:src="@drawable/rehber2_icon"
                />

            <Button
                android:background="@drawable/main_custom_button"
                android:id="@+id/btn_rehber"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="Rehber"
                android:textSize="@dimen/dashboard_text_size" />

...
