...
     <EditText
         android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_kayit"
         android:id="@+id/edt_search"
         android:hint="Lokasyon Ara"
         android:inputType="text"
         />

     <ListView
         android:layout_marginTop="5dp"
         android:id="@+id/list_view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/edt_search"

         />

...
